bundle/tests/scorecard/kuttl/routes/00-route.yaml
apiVersion: rc.app.stacks/v1beta2
kind: RuntimeComponent
metadata:
  name: route
spec:
  # Add fields here
  applicationImage: 'k8s.gcr.io/pause:2.0'
  replicas: 1
  securityContext:
    runAsUser: 1000720001
  expose: true
  route:
    host: myapp.mycompany.com
