bundle/tests/scorecard/kuttl/routes/01-add-path.yaml
apiVersion: rc.app.stacks/v1
kind: RuntimeComponent
metadata:
  name: route
spec:
  route:
    host: myapp.mycompany.com
    path: /mypath
