bundle/tests/scorecard/kuttl/routes/01-delete-route.yaml
apiVersion: rc.app.stacks/v1beta2
kind: RuntimeComponent
metadata:
  name: route
spec:
  # Add fields here
  applicationImage: 'k8s.gcr.io/pause:3.2'
  replicas: 1
  expose: false
