bundle/tests/scorecard/kuttl/routes/02-remove-route-spec.yaml
apiVersion: rc.app.stacks/v1
kind: RuntimeComponent
metadata:
  name: route
  annotations:
    step: "02"
spec:
  # Add fields here
  applicationImage: k8s.gcr.io/pause:3.2
  replicas: 1
  expose: true
  route:
