bundle/tests/scorecard/kuttl/routes/03-delete-route.yaml
apiVersion: rc.app.stacks/v1
kind: RuntimeComponent
metadata:
  name: route
spec:
  # Add fields here
  expose: false
