bundle/tests/scorecard/kuttl/routes/test-rbac.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: scorecard-kuttl
---
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: scorecard-kuttl
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: scorecard-kuttl
subjects:
  - kind: ServiceAccount
    name: scorecard-kuttl
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: scorecard-kuttl
rules:
  - apiGroups:
      - ""
    resources:
      - secrets
    verbs:
      - get
      - list
      - create
      - delete
  - apiGroups:
      - ""
    resources:
      - namespaces
      - pods
      - services
      - routes
    verbs:
      - get
      - list
  - apiGroups:
      - apps
    resources:
      - deployments
      - statefulsets
    verbs:
      - get
  - apiGroups:
      - autoscaling
    resources:
      - horizontalpodautoscalers
    verbs:
      - get
  - apiGroups:
      - monitoring.coreos.com
    resources:
      - servicemonitors
    verbs:
      - get
  - apiGroups:
      - image.openshift.io
    resources:
      - imagestreams
    verbs:
      - get
      - list
      - create
      - patch
      - delete
  - apiGroups:
      - events.k8s.io
    resources:
      - events
    verbs:
      - get
      - list
  - apiGroups:
      - serving.knative.dev
    resources:
      - services
    verbs:
      - get
  - apiGroups:
      - app.stacks
    resources:
      - runtimecomponents
    verbs:
      - get
      - list
      - create
      - patch
      - delete
  - apiGroups:
      - route.openshift.io
    resources:
      - routes
    verbs:
      - get
