bundle/tests/scorecard/kuttl/routes/00-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
spec:
  host: myapp.mycompany.com
