bundle/tests/scorecard/kuttl/routes/01-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route
status:
  readyReplicas: 1
