bundle/tests/scorecard/kuttl/routes/02-assert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: route
  annotations:
    step: "02"
status:
  replicas: 1
  readyReplicas: 1
  updatedReplicas: 1
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
  annotations:
    step: "02"
spec:
  host: myapp.mycompany.com
