bundle/tests/scorecard/kuttl/routes/02-errors.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route
  annotations:
    step: "02"
spec:
  path: /mypath
